force-app/main/default/objects/Card__c/fields/Assignee__c.field-meta.xml
<CustomField>
    <fullName>Assignee__c</fullName>
    <label>Assignee</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>