force-app/main/default/objects/Card__c/fields/Card_Id__c.field-meta.xml
<CustomField>
    <fullName>Card_Id__c</fullName>
    <externalId>true</externalId>
    <label>Card Id</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>