force-app/main/default/objects/Card__c/fields/Card_Position__c.field-meta.xml
<CustomField>
    <fullName>Card_Position__c</fullName>
    <label>Card Position</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>