force-app/main/default/objects/Card__c/fields/StatusPosition__c.field-meta.xml
<CustomField>
    <fullName>StatusPosition__c</fullName>
    <label>StatusPosition</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>